--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Bebas+Neue&family=Quicksand");
+
+* {
+  font-family: "Quicksand", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: linen;
+}
+
+div.head-container {
+  display: block;
+  text-align: center;
+  margin: 75px auto 30px auto;
+  width: 90%;
+}
+
+div.head-container h1 {
+  /* font-family: "Bungee Spice", cursive; */
+  font-family: "Bebas Neue", cursive;
+  font-weight: 900;
+  letter-spacing: 2px;
+  font-size: 2.5rem;
+}
+
+div.head-container p {
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+
+div.content-container {
+  display: flex;
+  justify-content: center;
+}
+
+div.box {
+  padding: 5px 15px;
+  font-size: 1.5rem;
+  background-color: floralwhite;
+  box-shadow: 2px 2px 5px black;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 15px;
+  font-weight: bold;
+}
+
+button {
+  cursor: pointer;
+  font-size: 1.2rem;
+  padding: 7px 25px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 2px 2px 5px gray;
+  display: block;
+  margin: 20px auto;
+  background-color: darkslateblue;
+  color: mistyrose;
+  font-weight: bold;
+  letter-spacing: 2px;
 }
